# fastapi-strawberry-tortoise

./: .env.example  .gitignore  LICENSE  Pipfile  README  compose.yml  docker-compose.yml  index.css  main.py  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main_schema.py  server.py  settings.py
assets/: response_codes.json
authentication/: models.py
builder/: core.py
core/: models.py  mutations.py  queries.py  routes.py  signals.py  views.py
dto/: core.py  interfaces.py  response.py  respose.py
migrations/: env.py
migrations/models/: 0_20240503134607_init.py  2_20240319172657_None.py  3_20240324111650_activate_user.py
migrations/versions/: 48c60a8d679d_null_phone_number.py  71c5a335d44b_init.py
mixins/: models.py
settings/: database.py
templates/emails/: base.html  welcome.html
utils/: auth.py  dependencies.py  mail.py  pagination.py  paginator.py  permission.py  validators.py
