[tool.aerich]
tortoise_orm = "settings.database.ORM"
location = "./migrations"
src_folder = "./."

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "fastapi-strawberry-graphql"
version = "0.1.0"
description = "FastAPI + Strawberry GraphQL + JWT Authentication + Tortoise ORM"
authors = ["daudln <daudnamayala@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aerich = "0.7.2"
asyncpg = "0.29.0"
bcrypt = "4.1.2"
cryptography = "42.0.5"
fastapi = "0.110.0"
fastapi-mail = "1.4.1"
fastapi-pagination = "0.12.21"
pyjwt = "2.8.0"
python-dotenv = "1.0.1"
strawberry-graphql = "0.221.1"
tortoise-orm = "0.20.0"
uvicorn = "0.29.0"

[tool.poetry.group.dev.dependencies]
black = "24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
